setting up the environment

--- a/libs/shared-core/package.json
+++ b/libs/shared-core/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@flavorful-symphonies/shared-core",
   "version": "0.0.1",
-  "dependencies": {},
   "main": "./index.js",
   "module": "./index.mjs",
-  "typings": "./index.d.ts"
+  "typings": "./index.d.ts",
+  "devDependencies": {
+    "@types/zen-observable": "^0.8.4"
+  }
 }
