--- a/apps/flavorful-symphonies-api/tsconfig.app.json
+++ b/apps/flavorful-symphonies-api/tsconfig.app.json
@@ -2,9 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
-    "types": ["node", "express"]
+    "module": "commonjs"
   },
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "config/mongoose.ts"]
 }
