--- a/apps/flavorful-symphonies-api/tsconfig.json
+++ b/apps/flavorful-symphonies-api/tsconfig.json
@@ -1,7 +1,15 @@
 {
   "extends": "../../tsconfig.base.json",
   "files": [],
-  "include": [],
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types", "./environment.d.ts"],
+
+    "paths": {
+      "@config/*": ["apps/flavorful-symphonies-api/config/*"],
+      "@graphQl/*": ["apps/flavorful-symphonies-api/src/graphQl/*"]
+    }
+  },
   "references": [
     {
       "path": "./tsconfig.app.json"
@@ -9,8 +17,5 @@
     {
       "path": "./tsconfig.spec.json"
     }
-  ],
-  "compilerOptions": {
-    "esModuleInterop": true
-  }
+  ]
 }
