fix : apollo client fetching

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.3",
+    "@apollo/experimental-nextjs-app-support": "^0.4.2",
     "@apollo/server": "^4.9.3",
     "@apollo/subgraph": "^2.5.4",
     "@nx/next": "16.7.4",
