--- a/libs/shared-core/tsconfig.lib.json
+++ b/libs/shared-core/tsconfig.lib.json
@@ -4,6 +4,6 @@
     "outDir": "../../dist/out-tsc",
     "declaration": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "../../apps/flavorful-symphonies-front/app/utlis/apollo.ts", "../../apps/flavorful-symphonies-front/app/utlis/env.ts"],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
