fix : removed functions from resolvers to services

--- a/apps/flavorful-symphonies-api/tsconfig.spec.json
+++ b/apps/flavorful-symphonies-api/tsconfig.spec.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs"
+    "module": "commonjs",
+    "types": ["jest", "node"],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "include": [
     "jest.config.ts",
